# py-playwright-ui-api-framework

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Makefile  README.md  conftest.py  pyproject.toml
.github/workflows/: ci.yml  nightly-regression.yml  publish-allure.yml
config/: dev.yaml  prod.yaml  stage.yaml
docker/: Dockerfile  docker-compose.yml
docs/: architecture.md
src/framework/: __init__.py  logging.py
src/framework/api/: __init__.py  auth.py  base_service.py  client.py
src/framework/api/models/: __init__.py  _generated.py
src/framework/api/services/: __init__.py  auth_service.py  billers_service.py  bills_service.py  files_service.py  health_service.py  payment_methods_service.py  payments_service.py  users_service.py
src/framework/config/: __init__.py  settings.py
src/framework/data/: __init__.py  factories.py
src/framework/secrets/: __init__.py  keyvault.py
src/framework/ui/: __init__.py  base_page.py
src/framework/ui/pages/: __init__.py  home_page.py  scenarios_page.py
tests/api/: conftest.py  test_auth.py  test_billers.py  test_health.py
tests/e2e/: test_scenarios_flow.py
tests/ui/: conftest.py  test_home_page.py
